--- a/style.css
+++ b/style.css
@@ -14,6 +14,38 @@ html {
 }
 /* End of Common Styles */
 
+/* Navbar */
+.navbar {
+    width: 100%;
+    height: 8rem;
+    background-color: rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    padding: 3rem;
+}
+
+.logo {
+    position: absolute;
+    top: 1.5rem;
+    left: 4rem;
+}
+
+.logo a {
+    font-family: "MADE Soulmaze", sans-serif;
+    font-size: 2.5rem; 
+    color: #eee;
+    letter-spacing: 0.1rem;
+}
+
+.logo span {
+    font-family: "MADE Soulmaze", sans-serif;
+    font-size: 3.5rem; 
+    font-weight: bold;
+    color: #9e0e09;
+}
+/* End of Nabar */
+
 /* Section 1 */
 .section-1 {
     width: 100%;
