--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
 /* Navbar */
 .navbar {
     width: 100%;
-    height: 8rem;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.9);
     position: fixed;
     top: 0;
@@ -32,25 +32,78 @@ html {
 }
 
 .logo a {
-    font-family: "MADE Soulmaze", sans-serif;
+    font-family: "Squada One", sans-serif;
     font-size: 2.5rem; 
     color: #eee;
     letter-spacing: 0.1rem;
 }
 
 .logo span {
-    font-family: "MADE Soulmaze", sans-serif;
+    font-family: "Squada One", sans-serif;
     font-size: 3.5rem; 
     font-weight: bold;
     color: #9e0e09;
 }
+
+.nav-list {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav-link {
+  font-family: "Squada One", sans-serif;
+  font-size: 4rem;
+  letter-spacing: .3rem;
+  color: #fff;
+  margin: 2rem 0;
+  transition: color .4s;
+}
+
+.nav-link:hover {
+  color: #9e0e09;
+}
 /* End of Nabar */
+
+/* Menu */
+.menu {
+  width: 4rem;
+  height: 4rem;
+  position: fixed;
+  top: 2rem;
+  right: 4rem;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+}
+
+.line {
+  width: 100%;
+  height: 0.2rem;
+  background-color: #eee;
+}
+
+.line-1 {
+  width: 50%;
+}
+
+.line-3 {
+  width: 50%;
+  margin-left: auto;
+}
+/* End of Menu */
 
 /* Section 1 */
 .section-1 {
     width: 100%;
     height: 100vh;
-    background: url(images/dark-bg.jpeg) no-repeat;
+    background: url(images/studio.jpg) no-repeat;
     background-size: cover;
 }
 
