--- a/style.css
+++ b/style.css
@@ -17,12 +17,17 @@ html {
 /* Navbar */
 .navbar {
     width: 100%;
-    height: 100vh;
+    height: 8rem;
     background-color: rgba(0, 0, 0, 0.9);
     position: fixed;
     top: 0;
     z-index: 10;
     padding: 3rem;
+    transition: height 0.5s;
+}
+
+.navbar.change {
+  height: 100vh;
 }
 
 .logo {
@@ -53,6 +58,8 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .nav-link {
